# stack

./: .gitignore  CMakeLists.txt  Dockerfile.rocky  Dockerfile.ubuntu  MPEGAudioFile.cpp  MPEGAudioFile.h  README.md  SelectCue.ui  StackActionCue.cpp  StackActionCue.h  StackActionCue.ui  StackAlsaAudioDevice.cpp  StackAlsaAudioDevice.h  StackApp.cpp  StackApp.h  StackAudioCue.cpp  StackAudioCue.h  StackAudioCue.ui  StackAudioDevice.cpp  StackAudioDevice.h  StackAudioFile.cpp  StackAudioFile.h  StackAudioFileMP3.cpp  StackAudioFileMP3.h  StackAudioFileWave.cpp  StackAudioFileWave.h  StackAudioPreview.cpp  StackAudioPreview.h  StackCue.cpp  StackCue.h  StackCueBase.cpp  StackCueHelper.cpp  StackCueList.cpp  StackCueListWidget.cpp  StackCueListWidget.h  StackFadeCue.cpp  StackFadeCue.h  StackFadeCue.ui  StackGroupCue.cpp  StackGroupCue.h  (+25 more)
src/: MPEGAudioFile.cpp  MPEGAudioFile.h  StackActionCue.cpp  StackActionCue.h  StackAlsaAudioDevice.cpp  StackAlsaDevice.cpp  StackAlsaMidiDevice.cpp  StackAlsaMidiDevice.h  StackApp.cpp  StackApp.h  StackAudioCue.cpp  StackAudioCue.h  StackAudioDevice.cpp  StackAudioDevice.h  StackAudioFile.cpp  StackAudioFile.h  StackAudioFileFLAC.cpp  StackAudioFileFLAC.h  StackAudioFileMP3.cpp  StackAudioFileMP3.h  StackAudioFileOgg.cpp  StackAudioFileOgg.h  StackAudioFileWave.cpp  StackAudioFileWave.h  StackAudioLevelsTab.cpp  StackAudioLevelsTab.h  StackAudioPreview.cpp  StackAudioPreview.h  StackCue.cpp  StackCue.h  StackCueBase.cpp  StackCueHelper.cpp  StackCueList.cpp  StackCueList.h  StackCueListContentWidget.cpp  StackCueListHeaderWidget.cpp  StackCueListWidget.cpp  StackCueListWidget.h  StackError.h  StackExecCue.cpp  (+58 more)
ui/: SelectCue.ui  SelectTriggerType.ui  StackActionCue.ui  StackAddMidiDevice.ui  StackAddNetworkPatch.ui  StackAudioCue.ui  StackExecCue.ui  StackFadeCue.ui  StackGroupCue.ui  StackKeyTrigger.ui  StackMidiCue.ui  StackMidiTrigger.ui  StackOSCCue.ui  StackRenumberCue.ui  StackShowSettings.ui  StackTimeTrigger.ui  resources.xml  stack.css  window.ui
